Fix footer help menu from being hidden behind button cards by increasing z-index

--- a/docs/styles/_yuga_overrides.scss
+++ b/docs/styles/_yuga_overrides.scss
@@ -1038,7 +1038,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 14px;
     background-color: #f75821;
     cursor: pointer;
-    z-index: 4999;
+    z-index: 2147483638;
 
     -moz-transition: bottom 300ms ease;
     -webkit-transition: bottom 300ms ease;
@@ -1068,7 +1068,7 @@ h1, h2, h3, h4, h5, h6 {
     padding: 5px 20px 10px 20px;
     bottom: -150px;
     right: 60px;
-    z-index: 500;
+    z-index: 17483638;
     width: 180px;
     font-size: 14px;
     margin-top: 0;
